@@ -4,6 +4,7 @@ Version 7.7.0
 - Add static ``Raven.capture`` methods that send to the most recently constructed Raven instance.
 - Add support for setting ``ravenFactory``, ``release``, ``environment`` and ``serverName``
   via JNDI, System Environment or Java System Properties (like the DSN).
+- Send headers as an array of arrays, no longer wrapped in added apostrophes.
 
 Version 7.6.0
 -------------
